<resources>
    <string name="app_name">Wages</string>
    <string name="user_name">User Name</string>
    <string name="daily_wages">DAILY WAGES</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="signup">.SignUP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profession">Profession</string>
    <string name="create_the_new_account">CREATE THE \nNEW ACCOUNT</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="email">Email</string>
    <string name="loading">Loading</string>
    <string name="type_the_message">Type the Message</string>
    <string name="hello">Hello</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="not_yet_available">Not Yet Available</string>
    <string name="review">REVIEW</string>
    <string name="order">Order</string>
    <string name="request">Request</string>
    <string name="current_email">Current Email</string>
    <string name="authenticate">AUTHENTICATE</string>
    <string name="you_can_update_your_email_address_after_verify_your_previous_email_and_password">You can update your email address after verify your previous email and password</string>
    <string name="new_email">New Email</string>
    <string name="update_email">Update Email</string>
    <string name="change_the_email">CHANGE THE EMAIL</string>
</resources>