<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerFragments.WorkerRecycleViewDetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout="@android:layout/simple_gallery_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#EDEBEB"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:ems="5"
                    android:text="@string/full_name"/>

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@string/loading"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:ems="5"
                    android:text="@string/user_name"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@string/loading"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:ems="5"
                    android:text="@string/email"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@string/loading"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:ems="5"
                    android:text="@string/phone"/>

                <TextView
                    android:id="@+id/phone_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@string/loading"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:ems="5"
                    android:text="@string/profession"/>

                <TextView
                    android:id="@+id/profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@string/loading"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/onlyOnce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_yet_available"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>
            <Spinner
                android:id="@+id/reviewStars"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:enabled="false"
                android:textColor="@color/black"
                android:inputType="none"
                tools:ignore="LabelFor"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hireButton"
                android:layout_gravity="center"
                android:text="Hire"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/background"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailView"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/background"/>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/background"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/chat" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

