<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_bar"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:SpinKit_Color="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/background"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="160dp"
                    app:cardElevation="16dp">

                    <ImageView
                        android:id="@+id/logoImage"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/logo"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/daily_wages"
                    android:textColor="@color/black"
                    android:textSize="26sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="2dp"
                    app:counterMaxLength="20"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/email">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="2dp"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/password"
                    app:counterEnabled="true"
                    >

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:maxLength="20"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/login_forget_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:text="@string/forget_password"
                    android:textColor="#A30606"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#FF9800"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/signup_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/signup"
                        android:textColor="#950B0B"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
