<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".ChangeEmailActivity">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_bar"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:SpinKit_Color="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#F5F8CC0C"
                android:scaleType="fitCenter"
                android:src="@drawable/emailimage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#E8E4E4"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Verify the email"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/current_email_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@color/white"
                    android:hint="@string/current_email"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/current_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/current_password_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/password">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/current_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/authenticate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/background"
                    android:text="@string/authenticate" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#E8E4E4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Change the email"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/new_email_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@color/white"
                    android:hint="@string/current_email"
                    android:textColorHint="@color/black"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:enabled="false"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/update_email_button"
                    android:layout_width="wrap_content"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/background"
                    android:text="Update Email" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>